fix empty whitespace on right side in mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -277,3 +277,7 @@ ul.dev, ul.support, ul.software {
   text-align: left;
   color: white;
 }
+
+html,body{
+  overflow-x: hidden;
+}
